Bug 373077 - Web Slice Popups when Color is not Valid
Summary: Web Slice Popups when Color is not Valid
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.1 Beta
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-29 15:55 UTC by X-Raym
Modified: 2016-12-07 13:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description X-Raym 2016-11-29 15:55:24 UTC
Hi

I used the image > séparer l'image (split image) functions,
I get an error message which told me that the color setting is wrong,
I understand that, I only need to choose the right colors,
but I don't think it should trigger the warning pop up for every slices as they all have the same error.

Here is a demo :
http://i.imgur.com/ijc62rQ.gifv
Comment 1 X-Raym 2016-11-29 15:56:50 UTC
Sorry, in french it was the action Image > Scinder l'image... (which I suppose is Split Image in english)
Comment 2 Halla Rempt 2016-12-07 12:55:49 UTC
Hi X-Raym,

Yes, I can confirm the issue. I'll try to a) make sure that exr isn't the default -- that usually isn't what people want and b) that the dialog only pops up once.
Comment 3 Halla Rempt 2016-12-07 13:55:04 UTC
Git commit 6266fbc022db7c1cd98c45cfb594689ad6652947 by Boudewijn Rempt.
Committed on 07/12/2016 at 13:46.
Pushed by rempt into branch 'krita/3.1'.

M  +38   -7    plugins/extensions/imagesplit/imagesplit.cpp
M  +1    -1    plugins/extensions/imagesplit/imagesplit.h

https://commits.kde.org/krita/6266fbc022db7c1cd98c45cfb594689ad6652947
Comment 4 Halla Rempt 2016-12-07 13:55:04 UTC
Git commit 1ae900d6937eb6c74c4b9c3fece28619e0a6a2d4 by Boudewijn Rempt.
Committed on 07/12/2016 at 13:54.
Pushed by rempt into branch 'krita/3.1'.

Select the mimetype of split images by default to the mimetype of the current image

M  +3    -3    plugins/extensions/imagesplit/dlg_imagesplit.cpp
M  +1    -1    plugins/extensions/imagesplit/dlg_imagesplit.h
M  +10   -6    plugins/extensions/imagesplit/imagesplit.cpp

https://commits.kde.org/krita/1ae900d6937eb6c74c4b9c3fece28619e0a6a2d4
Comment 5 Halla Rempt 2016-12-07 13:55:30 UTC
Git commit b19050f8f53a9b28d5d030b01685729491062694 by Boudewijn Rempt.
Committed on 07/12/2016 at 13:46.
Pushed by rempt into branch 'rempt/impex-refactoring'.

M  +38   -7    plugins/extensions/imagesplit/imagesplit.cpp
M  +1    -1    plugins/extensions/imagesplit/imagesplit.h

https://commits.kde.org/krita/b19050f8f53a9b28d5d030b01685729491062694
Comment 6 Halla Rempt 2016-12-07 13:55:30 UTC
Git commit dc36d85fe434a97f0b4b4a8bcb62c9c0a2832a50 by Boudewijn Rempt.
Committed on 07/12/2016 at 13:55.
Pushed by rempt into branch 'rempt/impex-refactoring'.

Select the mimetype of split images by default to the mimetype of the current image

M  +3    -3    plugins/extensions/imagesplit/dlg_imagesplit.cpp
M  +1    -1    plugins/extensions/imagesplit/dlg_imagesplit.h
M  +10   -6    plugins/extensions/imagesplit/imagesplit.cpp

https://commits.kde.org/krita/dc36d85fe434a97f0b4b4a8bcb62c9c0a2832a50