Select the mimetype of split images by default to the mimetype of the current image

BUG:373077